--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An app to choose things",
   "main": "index.js",
   "scripts": {
-    "start": "static-server ."
+    "start": "tsc --watch | parcel index.html"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/KProskuryakov/taking#readme",
   "devDependencies": {
-    "static-server": "^2.2.1"
+    "@parcel/packager-raw-url": "^2.10.2",
+    "@parcel/transformer-webmanifest": "^2.10.2",
+    "parcel": "^2.10.2",
+    "typescript": "^5.2.2"
   }
 }
